test/Fail/Issue852.err
Issue852.agda:9.1-10.24: error: [TerminationIssue]
Termination checking failed for the following functions:
  ℓ
Problematic calls:
  ℓ (at Issue852.agda:10.22-23)

Issue852.agda:12.1-13.26: error: [TerminationIssue]
Termination checking failed for the following functions:
  ℓ′
Problematic calls:
  ℓ′
    (at Issue852.agda:13.23-25)
